python/test-data/testLiteral1.err
Traceback (most recent call last):
  File "test-data/testLiteral1.py", line 3, in <module>
    T = Literal('a', 'b')
untypy.error.WyppTypeError: Cannot call Literal like a function. Did you mean Literal['a', 'b']?
