python/test-data/testLiteral1.py
from wypp import *

T = Literal('a', 'b')

def foo(x: T) -> int:
    pass
